samples/_failures_safe/1761697236_9a55ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ecd503a.c: In function ‘main’:
./samples/SAFE/__tmp_7ecd503a.c:164:13: error: expected expression at end of input
  164 |             machine.input_len ==
      |             ^~~~~~~
./samples/SAFE/__tmp_7ecd503a.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7ecd503a.c:164:13: error: expected declaration or statement at end of input
